--- a/views/admin/edit-product.ejs
+++ b/views/admin/edit-product.ejs
@@ -13,15 +13,21 @@
         <div class="form-control">
             <label for="title">Title</label>
             <input type="text" name="title" id="title">
+
+        </div>
+        <div class="form-control">
             <label for="title">Image</label>
             <input type="text" name="imgUrl" id="imgUrl">
+        </div>
+        <div class="form-control">
             <label for="title">Price</label>
             <input type="number" name="price" id="price" STEP="any">
+        </div>
+        <div class="form-control">
             <label for="title">Description</label>
             <textarea name="description" id="title" rows="5"></textarea>
         </div>
-
-        <button type="submit">Add Product</button>
+        <button class="btn" type="submit">Add Product</button>
     </form>
 </main>
 </body>
