--- a/views/shop/product-list.ejs
+++ b/views/shop/product-list.ejs
@@ -25,9 +25,8 @@
                     <p class="product__description"><%= product.description%></p>
                 </div>
                 <div class="card__actions">
-                    <form action="/add-to-cart">
-                        <button class="btn">Add to Cart</button>
-                    </form>
+                    <a class="btn" href="/products/<%= product.id%>">Details</a>
+                    <%- include("../layouts/add-to-card", { product: product }) %>
                 </div>
             </article>
         <%}%>
