--- a/views/admin/edit-product.ejs
+++ b/views/admin/edit-product.ejs
@@ -9,25 +9,28 @@
 </header>
 
 <main>
-    <form class="product-form" action="/admin/add-product" method="POST">
+    <form class="product-form" action="/admin/<% if (edit) { %>edit-product<% } else { %>add-product<% } %>" method="POST">
         <div class="form-control">
             <label for="title">Title</label>
-            <input type="text" name="title" id="title">
+            <input type="text" name="title" id="title" value="<% if (edit) { %><%= product.title %><% } %>">
+        </div>
+        <div class="form-control">
+            <label for="imgUrl">Image URL</label>
+            <input type="text" name="imgUrl" id="imgUrl" value="<% if (edit) { %><%= product.imgUrl %><% } %>">
+        </div>
+        <div class="form-control">
+            <label for="price">Price</label>
+            <input type="number" name="price" id="price" step="0.01" value="<% if (edit) { %><%= product.price %><% } %>">
+        </div>
+        <div class="form-control">
+            <label for="description">Description</label>
+            <textarea name="description" id="description" rows="5"><% if (edit) { %><%= product.description %><% } %></textarea>
+        </div>
+        <% if (edit) { %>
+            <input type="hidden" value="<%= product.id %>" name="productId">
+        <% } %>
 
-        </div>
-        <div class="form-control">
-            <label for="title">Image</label>
-            <input type="text" name="imgUrl" id="imgUrl">
-        </div>
-        <div class="form-control">
-            <label for="title">Price</label>
-            <input type="number" name="price" id="price" STEP="any">
-        </div>
-        <div class="form-control">
-            <label for="title">Description</label>
-            <textarea name="description" id="title" rows="5"></textarea>
-        </div>
-        <button class="btn" type="submit">Add Product</button>
+        <button class="btn" type="submit"><% if (edit) { %>Update Product<% } else { %>Add Product<% } %></button>
     </form>
 </main>
 </body>
